
portage-bashrc-mv-18.0
----------------------
It is now possible to set NOQLOP to skip the qlop feature (e.g. for
comptability problems with old qlop versions). In addition, the FLAG feature
is now the first file parsed so that it /etc/portage/package.cflags can be
used to set this variable.
The AUTHORS file now finally contains the contributor to 17.3:
Sorry, I had changed it immediately but had forgotten to commit.


portage-bashrc-mv-17.0
----------------------
No longer work with <app-portage/portage-utils-0.74-r1, but support instead
>=app-portage/portage-utils-0.80_pre20190605.


portage-bashrc-mv-16.0
----------------------
New localepurge configuration; ignore that of app-admin/localepurge


portage-bashrc-mv-15.0
----------------------
Support MESONDEDUP:
>=meson-0.47 had the insane idea to forbid the user to specify flags
simultaneously in e.g. LDFLAGS and CFLAGS.
Although the same flags must necessarily be specified in some cases during
compile and link phase, meson insists to have the sole decision about this,
thus breaking with *FLAGS meant to be used also for other build systems.
As a workaround, portage-bashrc-mv now supports a variable MESONDEDUP:
If this variable is true then all flags from LDFLAGS which can occur
already in some other compile phase are removed.


portage-bashrc-mv-14.4
----------------------
unless CCACHE_HASHDIR is set to true, CCACHE_NOHASHDIR is now set.
This effectively means that the ccache default of that variable is inverted.
This should increase the number of ccache hits in average although in some
cases it might cause issues: Try setting CCACHE_HASHDIR=1 in case of
miscompilations with ccache.


portage-bashrc-mv-14.0
----------------------
Improve support/customization for filtering *FLAGS depending on the compiler.


portage-bashrc-mv-13.0
----------------------

Important!

If you use >=portage-2.2.15 and have previously used <portage-bashrc-mv-13